tests/NormalTests/paczka1/fuzzy1/17865114.err
Error in line 2: v0aPL A307 11,1
Error in line 3: v0aPL S329 36,9
Error in line 1: 7ev S329 52,9
Error in line 5: 7ev A594 81,7
Error in line 6: 7ev A307 9,4
Error in line 16: QkfA A747 145,4
Error in line 9: 7ev S329 72,2
Error in line 29: DsboHfzn A594 49,0
